@@ -161,18 +161,12 @@ You might use something like:
 
   use Path::Class;
 
-  has 'filename' => (
-    is      => 'ro',
-    isa     => 'Str',
-    lazy    => 1,
-    default => sub {
-        my ($self) = @_;
-	my $file = file($self->base_dir, $self->level,
-			join(',', @{ $self->tile_coords }) . '.png');
-        return $file->stringify;
-    },
-  );
-
+  override 'build_filename' => sub {
+    my ($self) = @_;
+    my $file = file($self->base_dir, $self->level,
+	            join(',', @{ $self->tile_coords }) . '.png');
+    return $file->stringify;
+  };
 
 =cut
 
